# rag-project

./: .gitignore  README.md  REPOSITORY_EXPLANATION.md  REPOSITORY_SUMMARY.md  SETUP_GUIDE.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
docs/: README-JP.md
evals/datasets/: corpus.json
evals/v1/results/: eval_20260405_154840.json
evals/v1/scripts/: run_evals_v1.py
evals/v2/results/: eval_20260405_063409.json  eval_e2e_20260405_104221.json  eval_e2e_gen_20260405_082325.json
evals/v2/scripts/: run_evals_e2e.py  run_evals_retrieval.py  run_generate_e2e_responses.py
frontend/: app.py  deps.py
frontend/components/: chat_stream.py  feedback.py  new_chat.py  sidebar.py  source_panel.py
frontend/services/: conversation_loader.py  feedback_repo.py
frontend/state/: session_state.py
frontend/workflows/: chat_flow.py  chat_stream.py
legacy/: data_processing.py  vector_store.py
src/: chat_history_database.py  config.py  data_processing.py  ingest.py  qa_chain.py  reranker_utils.py  utils.py
src/database/: connection.py  conversation_queries.py  history_manager.py
src/ingestion/: ingest_regulations.py  parser.py  splitter.py
src/services/: background_tasks.py  title_generator.py
